website's performance improved: images compressed more

--- a/services.html
+++ b/services.html
@@ -418,21 +418,21 @@
         <h4 class="footer-headings text-center p-1">Follow Us</h4>
         <ul class="list-inline ">
           <li class="list-inline-item social-links text-center">
-            <a class="btn" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank" `rel="noopener"  role="button"><i
+            <a class="btn" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank" rel="noopener"  role="button"><i
                 class="fab fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank" `rel="noopener"  role="button"><i
+            <a class="btn" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank" rel="noopener"  role="button"><i
                 class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" `rel="noopener" role="button"><i
+            <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" rel="noopener" role="button"><i
                 class="fab fa-linkedin-in"></i></a>
             <span class="sr-only">Twitter</span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" `rel="noopener" role="button"><i
+            <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" rel="noopener" role="button"><i
                 class="fab fa-youtube"></i></a>
           </li>
         </ul>
