--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row massage-benefits-content">
         <div class="col-12 col-md-6 mb-5 video-container p-2 p-sm-5">
           <div class="ratio ratio-16x9">
-            <iframe src="assets/images/massage-video.mp4" title="YouTube video" allowfullscreen></iframe>
+            <iframe src="/assets/images/massage-video.mp4" title="YouTube video" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
@@ -217,21 +217,21 @@
           <h4 class="footer-headings text-center p-1">Follow Us</h4>
           <ul class="list-inline ">
             <li class="list-inline-item social-links text-center">
-              <a class="btn" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank" `rel="noopener"  role="button"><i
+              <a class="btn" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank" rel="noopener"  role="button"><i
                   class="fab fa-facebook-f"></i></a>
             </li>
             <li class="list-inline-item">
-              <a class="btn" style="background-color: #ac2bac;" href="//www.instagram.com" target="_blank" `rel="noopener" role="button"><i
+              <a class="btn" style="background-color: #ac2bac;" href="//www.instagram.com" target="_blank" rel="noopener" role="button"><i
                   class="fab fa-instagram"></i></a>
             </li>
             <li class="list-inline-item">
-              <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" `rel="noopener" role="button"><i
+              <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" rel="noopener" role="button"><i
                   class="fab fa-linkedin-in"></i></a>
               <span class="sr-only">Twitter</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" `rel="noopener" role="button"><i
+              <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" rel="noopener" role="button"><i
                   class="fab fa-youtube"></i></a>
             </li>
           </ul>
