--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <div class="row massage-benefits-content">
         <div class="col-12 col-md-6 mb-5 video-container p-2 p-sm-5">
           <div class="ratio ratio-16x9">
-            <iframe src="/assets/images/massage-video.mp4cl" title="YouTube video" allowfullscreen></iframe>
-          </div>
+            <iframe src="/assets/images/massage-video.mp4" title="YouTube video" allowfullscreen></iframe>
+          </div>c
         </div>
         <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
           <h1 class="section-sub-heading mb-4">Why should you get a massage with us?</h1>
