added new images for Lighthouse testing to put them on README.md

--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
                       </div>
                   </div>
                   
-                  <div class="col-md-6 shadow-lg">
-                    <div class="contact-us mb-4">
+                  <div class="col-md-6 shadow-lg mt-5">
+                    <div class="contact-us mb-3">
                       <h5>Message Us</h5>
           </div>
   <!-- Bootstrap 5 starter form -->
