--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
   </nav>
 </header>
 
-<div class="container-fluid hero-container banner-facilities">
+<div class="container-fluid hero-container services-image">
   <div class="row">
     
       <div class="col-12">
