added javascript for modal booking services

--- a/facilities.html
+++ b/facilities.html
@@ -115,11 +115,12 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
       </div>
       </div>
 </section>
-
-      <div class="container-fluid treatment-images facilities-massage-banner mb-5">
+<div class="container-fluid">
+      <div class="hero-container facilities-massage-banner mb-5">
         <div class="row">
       <div class="col-12">
        </div>
+  </div>
   </div>
   </div>
 
