--- a/services.html
+++ b/services.html
@@ -180,13 +180,14 @@
                   </div>
                   </div>
                   <div class="mb-3">
-                    <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
                     <label for="input_starttime">Twelve hour clock</label>
+                    <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
+                    
                   </div>
           </form>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" data-bs-dismiss="modal">Sumbmit</button>
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" data-bs-dismiss="modal">Book Now</button>
       </div>
     </div>
   </div>
@@ -195,11 +196,11 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalToggleLabel2">Modal 2</h5>
+        <h5 class="modal-title" id="exampleModalToggleLabel2">Booking Completed</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-       Thank you for booking.
+       Thank you for choosing our services.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -532,5 +533,6 @@
 </footer>
  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/main.js"></script>
   </body>
   </html>
