--- a/services.html
+++ b/services.html
@@ -8,9 +8,10 @@
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <title>First Milestone Project</title>
+    <script type="text/javascript" src="main.js" ></script>
 </head>
 <body>
 <header>
@@ -69,7 +70,6 @@
      </div>
 </div>
 </div>
-  
     <div class="row treatments-cards">
     <div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards"> 
         <div class="card">
@@ -78,7 +78,7 @@
               <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2"></i><del class="strike-through">70£</del><strong>49.99£</strong></div>
               <p class="card-text">Our De-Stress massage therapy is the modality that comes to mind when most people think about massage. One of the primary goals of this massage is to relax the entire body. This is accomplished by rubbing the muscles with long gliding strokes in the direction of blood returning to the heart. The light to medium pressure helps relieve stress, reduce pain, boost mood and promote relaxation. This massage is exceptionally beneficial for increasing the level of oxygen in the blood. This increase in circulation brings energy-producing nutrients and oxygen to your cells as well as carriers away metabolic waste products that can make you feel listless and drained</p>
               <div class="book-button">
-                <a class="btn card-button href="#" role="button">Book Now</a>
+                <a class="btn card-button" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Book Now</a>
             </div>
           </div>
           </div>
@@ -96,7 +96,7 @@
             deeper layers to encourage the process of cellular renewal, enhance blood circulation and
             help heal health issues such as acne, eczema and aging skin.An uplifting blend of bergamot, eucalyptus, thyme and lavender will energise and leave you feeling rejuvenated.</p>
             <div class="book-button">
-              <a class="btn card-button href="#" role="button">Book Now</a>
+              <a class="btn card-button" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Book Now</a>
           </div>
       </div>
 </div>
@@ -109,7 +109,7 @@
           <div><i class="far fa-clock"></i>50mins<i class="fas fa-tag ml-2"></i>60£</div>
           <p class="card-text">Reflexology is used to treat many of the same symptoms that acupuncture is used to treat, including anxiety, headaches, hormone imbalances and digestive problems. After an initial consultation, your reflexologist plans the session according to your symptoms. As you sit or lie comfortably on the treatment table, your reflexologist warms up your feet. Then precise pressure is applied to specific areas of the feet that correspond to certain areas of the body. After the treatment, your therapist may give you a self-care plan. Reflexology is an instantly relaxing and soothing therapy that benefits anyone who suffers from stress and anxiety</p>
           <div class="book-button">
-            <a class="btn card-button href="#" role="button">Book Now</a>
+            <a class="btn card-button" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Book Now</a>
         </div> 
         </div>
       </div>
@@ -136,7 +136,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form id="contactForm"onsubmit="alert('Thank you for contacting Purity Spa!Your enquiry has been submitted.')">
+        <form id="contactForm">
 
           <!-- Name -->
           <div class="mb-3">
@@ -159,26 +159,21 @@
           <div class="mb-3" >
             <select class="form-control" id="selectNeed">
               <option value="" selected disabled>Your threatment</option>
-              <option></option>
+              <option>Aromatotherapy</option>
               <option>Deep tissue massage</option>
               <option>De-stress massage</option>
-              <option>Technical Problem</option>
+              <option>Reflexology</option>
               <option>Other</option>
             </select>
           </div>
            <!-- Date -->
            <div class="mb-3">
-            Date formats: yyyy-mm-dd
-             <div class='col-sm-3'>
-                      <div class="form-group">
-                          <div class='input-group date' id='datetimepicker1'>
-                              <input type='text' class="form-control" />
-                              <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                              </span>
-                          </div>
-                      </div>
-                  </div>
-                  </div>
+            <div id="datetimepicker1" class="input-append date">
+              <input data-format="dd/MM/yyyy hh:mm:ss" type="text"></input>
+              <span class="add-on"><i data-time-icon="icon-time" data-date-icon="icon-calendar"></i></span>
+            </div>
+          </div>
+                
                   <div class="mb-3">
                     <label for="input_starttime">Twelve hour clock</label>
                     <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
@@ -196,7 +191,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalToggleLabel2">Booking Completed</h5>
+        <h5 class="modal-two-title" id="exampleModalToggleLabel2">Booking Completed</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -531,8 +526,8 @@
   </div>
   </div>
 </footer>
- 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/main.js"></script>
+
   </body>
   </html>
