pop up modal removed, added new booking page, addded titles to all pages

--- a/facilities.html
+++ b/facilities.html
@@ -11,12 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <title>First Milestone Project</title>
+    <title>Facilities Purity Spa Center</title>
 </head>
 <body>
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar fixed-top  navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>Purity Spa</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
             <h1 class="jumbotron-headings">
               Purity Spa Facilities
               </h1>
-              <h2 class="jumbotron-headings">
+              <h2 class="jumbotron-sub-heading">
               We are more than a simple Spa Center
               </h2>
           </section>
