--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <title>First Milestone Project</title>
+    <title>Contact Purity Spa</title>
 </head>
 <body>
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar fixed-top  navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>Purity Spa</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
              <h1 class="jumbotron-headings mt-5">
                 Want to know more?
                 </h1>
-                <h2 class="jumbotron-headings">
+                <h2 class="jumbotron-sub-heading">
                 Get in touch
                 </h2>
             </section>
@@ -101,12 +101,12 @@
     </div>
     <!-- Last Name -->
     <div class="mb-3">
-      <input class="form-control" id="lname" type="text" placeholder="Last name" required="required" />
+      <input class="form-control" id="lname" type="text" placeholder="Last name" required="required"/>
       <div class="invalid-feedback" data-sb-feedback="name:required">Please enter your Last Name.</div>
     </div>
     <!-- Email address -->
     <div class="mb-3">
-      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" required="required" />
+      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" required="required"/>
       <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Please enter your Email Address.</div>
       <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address invalid.</div>
     </div>
@@ -117,7 +117,7 @@
       <div class="invalid-feedback" data-sb-feedback="phoneNumber:number">Invalid number.Enter 8 digits.</div>
     </div>
     <div class="mb-3" >
-      <select class="form-control" id="selectNeed">
+      <select class="form-control" id="selectNeed" required="required">
         <option value="" selected disabled>--Select Your need--</option>
         <option>About treatments</option>
         <option>About facilities</option>
@@ -129,7 +129,7 @@
 
     <!-- Message input -->
     <div class="mb-3">
-      <textarea class="form-control" id="message" type="text" placeholder="Enter your Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+      <textarea class="form-control" id="message" type="text" placeholder="Enter your Message" style="height: 10rem;" required="required"></textarea>
       <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
     </div>
 
