--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
- 
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/style.css">
-  <title>First Milestone Project</title>
+  <title>Purity Spa Center</title>
 </head>
 
 <body>
   <header>
     <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>Purity Spa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -56,7 +59,7 @@
             <h1 class="jumbotron-headings animate__animated animate__bounce mt-5">
               Welcome to Purity Spa
             </h1>
-            <h2 class="jumbotron-headings">
+            <h2 class="jumbotron-sub-heading">
               The best  Spa Leisure Centre in town.
             </h2>
           </section>
