added favicon and meta tag in all pages

--- a/booking.html
+++ b/booking.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <title>Spa Center</title>
+    <meta name="author" content="Konstantina Strantzali">
+    <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
+    <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
 
 <head>
     <!-- Required meta tags -->
