--- a/facilities.html
+++ b/facilities.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title>Purity Spa Center</title>
+  <meta name="author" content="Konstantina Strantzali">
+  <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
+  <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
+  <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,11 +12,10 @@
 
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Facilities Purity Spa Center</title>
+   
 </head>
 <body>
 <header>
