--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title>Purity Spa Center</title>
+  <meta name="author" content="Konstantina Strantzali">
+  <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
+  <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
+  <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
 
 <head>
   <!-- Required meta tags -->
@@ -8,15 +13,12 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
-  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/style.css">
-  <title>Purity Spa Center</title>
+  
 </head>
 
 <body>
@@ -24,7 +26,7 @@
     <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>Purity Spa</a>
+        <a class="navbar-brand" href="index.html"><i class="fas fa-spa" id="logo-icon"></i>Purity Spa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,7 +53,7 @@
 
 
   <!--Banner Hero Image-->
-  <section class="banner-hero-home-image">
+  <section class="banner-image">
     <div class="container-fluid hero-container home-image">
       <div class="row">
         <div class="col-12">
@@ -78,7 +80,7 @@
       <br>
       <div class="row">
         <div class="col-12 col-md-6 pt-4 ">
-          <h5 class="text-center section-sub-heading">A warm Welcome</h5>
+          <h3 class="text-center section-sub-heading">A warm Welcome</h3>
           <br>
           <div class="section-content">
             <p>Purity Spa Leisure Centre, located in Putney is one of the most distinctive environments in which to
@@ -143,10 +145,6 @@
         </div>
       </div>
   </div>
-    
-    
-
-  </section>
 </section>
 
 
@@ -155,7 +153,7 @@
       <div class="row">
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3">
           <div class="timetable">
-            <h4 class="footer-headings text-center p-2">Opening Hours</h3>
+            <h4 class="footer-headings text-center p-2">Opening Hours</h4>
           </div>
           <table class="table table-borderless" id="table">
             <tbody>
@@ -185,18 +183,16 @@
             <h4 class="footer-headings text-center p-2">Get in touch</h4>
             <div class="contact-info-container">
               <ul>
+                <li>
                 <i class="far fa-paper-plane" aria-hidden="true"></i>
                 Purity Spa</li>
                 <li>143 Upper Richmond Road,</li>
                 <li>Putney</li>
                 <li>London</li>
                 <li>SW15976</li>
-
-                <li>
-                  <a href="0789456732"></a>
+                 <li> <a href="0789456732"></a>
                   <i class="fas fa-phone" aria-hidden="true"></i>
                   0789456732
-                  </a>
                 </li>
                 <li>
                   <a href="mailto:thermalspacenter.gmail.com">
@@ -231,7 +227,6 @@
               <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" rel="noopener" role="button"><i
                   class="fab fa-linkedin-in"></i></a>
               <span class="sr-only">Twitter</span>
-              </a>
             </li>
             <li class="list-inline-item">
               <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" rel="noopener" role="button"><i
@@ -247,7 +242,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
