--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
   <title>Purity Spa Center</title>
   <meta name="author" content="Konstantina Strantzali">
   <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
   <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
   <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
-
-<head>
+  </head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
