--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
   <title>Purity Spa Center</title>
   <meta name="author" content="Konstantina Strantzali">
   <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
   <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
-  <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
-  <head>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo-image.png"/>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
- <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+ <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     
@@ -96,32 +96,32 @@
                       <h5>Message Us</h5>
           </div>
   <!-- Bootstrap 5 starter form -->
-  <form id="contactForm"onsubmit="alert('Thank you for contacting Purity Spa!Your enquiry has been submitted.')">
+  <form id="contactForm" onsubmit="alert('Thank you for contacting Purity Spa!Your enquiry has been submitted.')">
 
     <!-- Name -->
     <div class="mb-3">
-      <input class="form-control" id="name" type="text" placeholder="Name" required="required"/>
+      <input class="form-control" id="name" type="text" placeholder="Name" required/>
       <div class="invalid-feedback" data-sb-feedback="name:required">Please enter your name</div>
     </div>
     <!-- Last Name -->
     <div class="mb-3">
-      <input class="form-control" id="lname" type="text" placeholder="Last name" required="required"/>
+      <input class="form-control" id="lname" type="text" placeholder="Last name" required/>
       <div class="invalid-feedback" data-sb-feedback="name:required">Please enter your Last Name.</div>
     </div>
     <!-- Email address -->
     <div class="mb-3">
-      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" required="required"/>
+      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" required/>
       <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Please enter your Email Address.</div>
       <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address invalid.</div>
     </div>
     <!-- Phone number -->
     <div class="mb-3">
-      <input class="form-control" id="phone" type="phoneNumber" placeholder="Phone Number" required="required" />
+      <input class="form-control" id="phone" type="text" placeholder="Phone Number" required/>
       <div class="invalid-feedback" data-sb-feedback="phoneNumber:required">Please enter Phone Number.</div>
       <div class="invalid-feedback" data-sb-feedback="phoneNumber:number">Invalid number.Enter 8 digits.</div>
     </div>
     <div class="mb-3" >
-      <select class="form-control" id="selectNeed" required="required">
+      <select class="form-control" id="selectNeed" required>
         <option value="" selected disabled>--Select Your need--</option>
         <option>About treatments</option>
         <option>About facilities</option>
@@ -133,7 +133,7 @@
 
     <!-- Message input -->
     <div class="mb-3">
-      <textarea class="form-control" id="message" type="text" placeholder="Enter your Message" style="height: 10rem;" required="required"></textarea>
+      <textarea class="form-control" id="message" placeholder="Enter your Message" style="height: 10rem;" required></textarea>
       <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
     </div>
 
@@ -144,24 +144,17 @@
 
   </form>
   </div>
-
+</div>
+</div>
+</div>
 </div>
 </section>
-<!-- SB Forms JS -->
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-
-
-
-
-
-
-
 <footer class="footer-area">
   <div class='container-fluid bg-dark'>
     <div class="row">
       <div class="col-sm-12 mt-4 col-md-6 col-lg-3">
         <div class="timetable">
-          <h4 class="footer-headings text-center p-2">Opening Hours</h3>
+          <h4 class="footer-headings text-center p-2">Opening Hours</h4>
         </div>
         <table class="table table-borderless" id="table">
           <tbody>
@@ -191,18 +184,16 @@
           <h4 class="footer-headings text-center p-2">Get in touch</h4>
           <div class="contact-info-container">
             <ul>
+              <li>
               <i class="far fa-paper-plane" aria-hidden="true"></i>
               Purity Spa</li>
               <li>143 Upper Richmond Road,</li>
               <li>Putney</li>
               <li>London</li>
               <li>SW15976</li>
-
-              <li>
-                <a href="0789456732"></a>
+               <li> <a href="0789456732"></a>
                 <i class="fas fa-phone" aria-hidden="true"></i>
                 0789456732
-                </a>
               </li>
               <li>
                 <a href="mailto:thermalspacenter.gmail.com">
@@ -230,17 +221,16 @@
                 class="fab fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank" rel="noopener"  role="button"><i
+            <a class="btn" style="background-color: #ac2bac;" href="//www.instagram.com" target="_blank" rel="noopener" role="button"><i
                 class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" rel="noopener"  role="button"><i
+            <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" rel="noopener" role="button"><i
                 class="fab fa-linkedin-in"></i></a>
             <span class="sr-only">Twitter</span>
-            </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" `rel="noopener" role="button"><i
+            <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" rel="noopener" role="button"><i
                 class="fab fa-youtube"></i></a>
           </li>
         </ul>
@@ -254,9 +244,8 @@
       </div>
     </div>
   </div>
-  </div>
 </footer>
-  
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   
 
