--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Konstantina Strantzali">
   <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
   <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
-  <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png" />
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo-image.png" />
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -65,7 +65,6 @@
       </div>
     </div>
   </div>
-  <section class="main-page-section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
@@ -162,11 +161,7 @@
             </div>
           </div>
         </div>
-    
-
-
-
-
+    </div>
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
@@ -260,6 +255,7 @@
                   </div>
                 </div>
               </div>
+            </div>
             </div>
 
 
@@ -361,6 +357,7 @@
                     </div>
                   </div>
                 </div>
+                </div>
 
 
                 <div class="container-fluid">
@@ -399,10 +396,6 @@
                       </div>
                     </div>
                   </div>
-
-
-
-
                   <div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards">
                     <div class="card">
                       <div class="card-body">
@@ -463,7 +456,8 @@
                       </div>
                     </div>
                   </div>
-                </section>
+                  </div>
+              
                   <footer class="footer-area">
                     <div class='container-fluid bg-dark'>
                       <div class="row">
