final HTML Validation to all pages: corrected html structure, removed syntax errors, code cleaned

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="author" content="Konstantina Strantzali">
   <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
   <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
-  <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
-  </head>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo-image.png"/>
+  
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
 <body>
   <header>
     <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><i class="fas fa-spa" id="logo-icon"></i>Purity Spa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -53,24 +53,24 @@
 
 
   <!--Banner Hero Image-->
-  <section class="banner-image">
+  <section class="banner-image-section">
     <div class="container-fluid hero-container home-image">
       <div class="row">
         <div class="col-12">
-          <section class="jumbotron text-center">
+          <div class="jumbotron text-center">
             <h1 class="jumbotron-headings animate__animated animate__bounce mt-5">
               Welcome to Purity Spa
             </h1>
             <h2 class="jumbotron-sub-heading">
               The best  Spa Leisure Centre in town.
             </h2>
-          </section>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section-about">
+  <section class="main-page-section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
@@ -99,21 +99,21 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container-fluid masage-benefits-container">
+  
+    <section class="container-fluid massage-benefits-section">
       <div class="row">
         <div class="col-12 text-center benefits-heading my-4">
-          <h1 class="section-heading">Benefits of Massage</h1>
+          <h3 class="section-heading">Benefits of Massage</h3>
         </div>
       </div>
       <div class="row massage-benefits-content">
         <div class="col-12 col-md-6 mb-5 video-container p-2 p-sm-5">
           <div class="ratio ratio-16x9">
             <iframe src="assets/images/massage-video.mp4" title="YouTube video" allowfullscreen></iframe>
-          </div>c
+          </div>
         </div>
         <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
-          <h1 class="section-sub-heading mb-4">Why should you get a massage with us?</h1>
+          <p class="section-sub-heading mb-4">Why should you get a massage with us?</p>
           <p class="section-content"> Massage is generally considered part of integrative medicine. It's increasingly being offered along with
             standard treatment for a wide range of medical conditions and situations.
 
@@ -144,12 +144,12 @@
           </p>
         </div>
       </div>
-  </div>
+  
 </section>
 
 
   <footer class="footer-area">
-    <div class='container-fluid bg-dark'>
+    <div class='container-fluid'>
       <div class="row">
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3">
           <div class="timetable">
