--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
 <header>
   <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
-  <nav class="navbar fixed-top  navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar fixed-top  navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>Purity Spa</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -150,7 +150,7 @@
 </div>
 </section>
 <footer class="footer-area">
-  <div class='container-fluid bg-dark'>
+  <div class='container-fluid'>
     <div class="row">
       <div class="col-sm-12 mt-4 col-md-6 col-lg-3">
         <div class="timetable">
