CSS validation, added images for validation results on README.md

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <!--Banner Hero Image-->
   <section class="banner-image-section">
-    <div class="container-fluid hero-container home-image">
+    <div class="container-fluid hero-container banner-home-page">
       <div class="row">
         <div class="col-12">
           <div class="jumbotron text-center">
