--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
     </nav>
   </header>
 
-  <div class="container-fluid hero-container services-image">
+  <div class="container-fluid hero-container banner-services-page">
     <div class="row">
       <div class="col-12">
         <section class="jumbotron text-center">
@@ -71,7 +71,7 @@
           <h2 class="section-heading text-center my-5">Body treatments</h2>
         </div>
       </div>
-      <div class="container-fluid hero-container body-treatment-container mb-5">
+      <div class="container-fluid hero-container banner-body-treatment mb-5">
         <div class="row">
           <div class="col-12">
           </div>
@@ -168,7 +168,7 @@
               <h2 class="section-heading text-center my-5">Facial treatments</h2>
             </div>
           </div>
-          <div class="container-fluid hero-container banner-facial mb-5">
+          <div class="container-fluid hero-container banner-facial-massage mb-5">
             <div class="row">
               <div class="col-12">
               </div>
@@ -265,7 +265,7 @@
                   <h2 class="section-heading text-center my-5">Bamboo massage</h2>
                 </div>
               </div>
-              <div class="container-fluid hero-container banner-bamboo mb-5">
+              <div class="container-fluid hero-container banner-bamboo-massage mb-5">
                 <div class="row">
                   <div class="col-12">
                   </div>
@@ -366,7 +366,7 @@
                       <h2 class="section-heading text-center my-5">Sauna</h2>
                     </div>
                   </div>
-                  <div class="container-fluid hero-container sauna-banner mb-5">
+                  <div class="container-fluid hero-container banner-sauna mb-5">
                     <div class="row">
                       <div class="col-12">
                       </div>
