--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     </div>
   </nav>
 </header>
-<div class="container-fluid banner-contact hero-container">
+<div class="container-fluid banner-contact-page hero-container">
     <div class="row">
         <div class="col-12">
             <section class="jumbotron text-center">
