--- a/facilities.html
+++ b/facilities.html
@@ -46,7 +46,7 @@
   </nav>
 </header>
 <section>
-<div class="container-fluid hero-container banner-facilities">
+<div class="container-fluid hero-container banner-facilities-page">
   <div class="row">
     
       <div class="col-12">
