added media queries, added more compressed images

--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
     <div class="row">
       <div class="col-12">
         <section class="jumbotron text-center">
-          <h1 class="jumbotron-headings">
+          <h1 class="jumbotron-headings  services-headings">
             Purity Spa Services
           </h1>
           <h2 class="jumbotron-sub-heading">
@@ -222,7 +222,7 @@
             <div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Reflexology<span class="badge bg-secondary bg-success">New</span></h5>
+                  <h5 class="card-title">Reflexology<span class="badge badge-treatment bg-secondary bg-success">New</span>
                   <div><i class="far fa-clock"></i>50mins<i class="fas fa-tag ml-2"></i>60£</div>
                   <p class="card-text">Reflexology is used to treat many of the same symptoms that acupuncture is used
                     to treat, including anxiety, headaches, hormone imbalances and digestive problems. After an initial
@@ -321,7 +321,7 @@
                 <div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Reflexology<span class="badge bg-secondary bg-success">New</span></h5>
+                      <h5 class="card-title">Reflexology<span class="badge badge-treatment  bg-secondary bg-success">New</span></h5>
                       <div><i class="far fa-clock"></i>50mins<i class="fas fa-tag ml-2"></i>60£</div>
                       <p class="card-text">Reflexology is used to treat many of the same symptoms that acupuncture is
                         used to treat, including anxiety, headaches, hormone imbalances and digestive problems. After an
@@ -420,7 +420,7 @@
                   <div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards">
                     <div class="card">
                       <div class="card-body">
-                        <h5 class="card-title">Reflexology<span class="badge bg-secondary bg-success">New</span></h5>
+                        <h5 class="card-title">Reflexology<span class="badge badge-treatment bg-secondary bg-success">New</span>
                         <div><i class="far fa-clock"></i>50mins<i class="fas fa-tag ml-2"></i>60£</div>
                         <p class="card-text">Reflexology is used to treat many of the same symptoms that acupuncture is
                           used to treat, including anxiety, headaches, hormone imbalances and digestive problems. After
