content corrected, added screenshot images for the website's README.md file

--- a/booking.html
+++ b/booking.html
@@ -77,11 +77,22 @@
                                 <div class="mb-3">
                                     <select class="form-control" id="selectNeed" required>
                                         <option value="" selected disabled>Select treatment</option>
-                                        <option>Aromatotherapy</option>
-                                        <option>Deep tissue massage</option>
                                         <option>De-stress massage</option>
+                                        <option>Aromatotherapy</option>
                                         <option>Reflexology</option>
-                                        <option>Other</option>
+                                        <option>Deep tissue massage</option>
+                                        <option>Express Facial</option>
+                                        <option>Brightening Facial</option>
+                                        <option>Relaxing Facial</option>
+                                        <option>Deluxe Facial</option>
+                                        <option>Warm Bamboo Massage</option>
+                                        <option>Sports Bamboo Massage</option>
+                                        <option>Hot stoned Bamboo</option>
+                                        <option>Aroma Bamboo Massage</option>
+                                        <option>Dry Sauna</option>
+                                        <option>Sauna for two</option>
+                                        <option>Sauna & Steam Room</option>
+                                        <option>Infrared Sauna</option>
                                     </select>
                                 </div>
                                 <!-- Date -->
