--- a/facilities.html
+++ b/facilities.html
@@ -67,7 +67,7 @@
   <div class="container-fluid facilities-services-section mb-5">
       <div class="row">
           <div class="col-12">
-              <h2 class="section-heading text-center uppercase p-5">Services</h2>
+              <h2 class="section-heading text-center uppercase p-5">Facilities</h2>
           </div>
       </div>
       <div class="row text-center">
@@ -86,7 +86,7 @@
             <i class="fas fa-hot-tub font-icons"></i>
               <h5>Hammam</h5>
               <p class="services-info section-content">Our spa centre offers Moroccan and Turkish Hammam facilities to double the level of your relax, revive, restore and re-energise.
-                Marrocan Hammam mineral rich-water is drawn from the only working Artesian well in London and offers the  benefits of spa treatments of authentic Moroccan Hammam delivered with uplifting aromas of roses, eucalyptus, Aragan oil and other native Moroccan products. 
+                Marrocan Hammam mineral rich-water is drawn from the only working Artesian well in London and offers the  benefits of spa treatments of authentic Moroccan Hammam delivered with native Moroccan products. 
                 Turkish Hammam offers ancient Turkish traditional methods of bathing to cleanse and exfoliate impurities from the body, using special techniques in the warmth and revitalisation of the Hammam Room.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
@@ -97,8 +97,7 @@
           <div class="col-12 col-md-6 col-lg-3 card-container">
             <i class= "fas fa-praying-hands font-icons"></i>
               <h5>Yoga <span class="badge badge-yoga bg-secondary bg-success text-center">Free</span> </h5>
-              <p class="services-info section-content"> Steam away the stress and feel your worries wash away with our unmissable sauna and steam room.  with a temperature reaching 90 C,
-A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration in order to cleanse the body of impurities.
+              <p class="services-info section-content"> Purity Spa offers free yoga classes to discover the combination of physical and mental exercises and the benefits of Vinyasa and Yin yoga. Roll out your yoga mat and join us in the best place to practice your sun salutations and increase your body wellbeing while finding the inner peace.
               </p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
@@ -126,7 +125,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
       <div class=" hero-container facilities-massage-banner mb-5"></div>
       </div>
 
-<section class="facilities-timetable">
+<section id="facilities-timetable">
   <div class="container-fluid mt-5 ">
 <div class="row">
 <div class="col-12">
@@ -151,7 +150,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
   </div>
 </div>
 </div>
-<div class="tab-content" id="navTabContent">
+<div class="tab-content">
   <!--Pool Timetable Tab-->
   <div class="tab-pane fade show active" id="navPool" role="tabpanel" aria-labelledby="navPoolTab">
       <div class="container-fluid p-2 my-3">
@@ -208,7 +207,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
               <p>14:00-18:00 Lane Swim</p>
           </div>
           <div class="col-12 col-md-3">
-            <p>18:00 Pool <b>Closed</b></p>
+            <p>18:00 Pool Closed</p>
         </div>
       </div>
       <div class="row facilities-timetable-class-row mx-md-5">
@@ -236,7 +235,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
           <p>12:00-19:00 Lame Swim</p>
       </div>
       <div class="col-12 col-md-3">
-        <p>19:00 Pool <b>Closed</b></p>
+        <p>19:00 Pool Closed</p>
     </div>
   </div>
 </div>  
