--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
           <div class="section-content">
             <p>Purity Spa Leisure Centre, located in Putney is one of the most distinctive environments in which to
               restore mind, body and spirit. Owning its name to Greek word "ευημερία" Purity Spa promises to bring purity and
-              prosperity to the costumers' life while experiencing our luxury and unique services.
-              With more than 100 years of operation, we work hard to create a friendly day spa environment, that
+              prosperity to the costumers' life while experiencing our luxury and unique services. All of our treatments have harness the power of nature and science to create ground-breaking formulations that
+              genuinely transform your skin. With more than 100 years of operation, we work hard to create a friendly day spa environment, that
               includes a range of modern facilities and provides affordable packages delivered by friendly, trained
               professionals.
-              Our therapists harness the power of nature and science to create ground-breaking formulations that
-              genuinely transform your skin.</p>
+              </p>
           </div>
         </div>
         <div class="col-12 col-md-5 text-center mb-5">
@@ -114,34 +113,8 @@
         </div>
         <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
           <p class="section-sub-heading mb-4">Why should you get a massage with us?</p>
-          <p class="section-content"> Massage is generally considered part of integrative medicine. It's increasingly being offered along with
-            standard treatment for a wide range of medical conditions and situations.
-
-            Massage benefits can include:
-
-            Reducing stress and increasing relaxation
-            Reducing pain and muscle soreness and tension
-            Improving circulation, energy and alertness
-            Lowering heart rate and blood pressure
-            Improving immune function
-            While more research is needed to confirm the benefits of massage, some studies have found massage may also
-            be helpful for:
-
-            Anxiety
-            Digestive disorders
-            Fibromyalgia
-            Headaches
-            Insomnia related to stress
-            Low back pain
-            Myofascial pain syndrome
-            Nerve pain
-            Soft tissue strains or injuries
-            Sports injuries
-            Temporomandibular joint pain
-            Upper back and neck pain
-            Beyond the benefits for specific conditions or diseases, some people enjoy massage because it often produces
-            feelings of caring, comfort and connection.
-          </p>
+          <p class="section-content"> Massage has been practiced for thousands of years and increasingly being offered along with standard beneficial health treatments, as it is generally considered part of integrative medicine and can have positive impact to a wide range of medical conditions and situations. Massage offers benefits  beyond simple relaxation as can reduce the pain of headache and the number of migraines. Lots of  studies have shown the effectiveness of massage for knee osteoarthritis fatigue, nausea, or depression, and it can also improve the function of your immune system. Furthermore a massage therapy can increase joint mobility and flexibility, reduce pain and muscle soreness, improve circulation, energy and alertness skin tone  and recovery of soft tissue injuries as well as  lower heart rate and blood pressure.
+            
         </div>
       </div>
   
