added media queries for ipad's vieport responsiveness, video and images on main page are fixed to be responsive

--- a/contact.html
+++ b/contact.html
@@ -70,24 +70,20 @@
               <p class="section-content mb-5">Purity Spa would love to hear from you. Our Costumer Support Team working hard to respond within 24 hours.</p>
               <div class="row">
                 <div class="col-md-6 contact-details">
-                    <div class="mt-5 text-center px-3">
-                          <div class="d-flex contact-details"> <span class="icons"><i class="fa fa-map-marker font-icon"></i></span>
+                    <div class="mt-5 text-center">
+                          <div class="d-flex mt-3 contact-details"> <span class="icons"><i class="fa fa-map-marker font-icon"></i></span>
                               <div class="address text-left"> 
-                                  <p>143 Upper Richmond Road</p>
+                                  <p>143 Upper Richmond Road, London</p>
                               </div>
                           </div>
-                          <div class="d-flex mt-3 contact-details"> 
-                              <div class="d-flex phone text-left">
+                          <div class="d-flex mt-3  contact-details"> 
+                              <div class="d-flex  phone text-left">
                                 <span class="icons">
                                 <i class="fa fa-phone font-icon"></i> </span>
-                                  <p> 0789456732</p>
+                                  <p class="number p-2"> 0789456732</p>
                               </div>
                           </div>
-                          <div class="d-flex align-items-center mt-3 contact-details"> <span class="icons"><i class="fas fa-envelope-square font-icon"></i></span>
-                              <div class="email text-left"> 
-                                  <p>prosperityspa@gmail.com</p>
-                              </div>
-                          </div>
+                          
                       </div>
                   </div>
                   
@@ -156,7 +152,7 @@
         <div class="timetable">
           <h4 class="footer-headings text-center p-2">Opening Hours</h4>
         </div>
-        <table class="table table-borderless" id="table">
+        <table class="table table-footer table-borderless" id="table">
           <tbody>
             <tr>
               <td>Weekends</td>
