--- a/facilities.html
+++ b/facilities.html
@@ -420,7 +420,7 @@
         <div class="timetable">
           <h4 class="footer-headings text-center p-2">Opening Hours</h4>
         </div>
-        <table class="table table-borderless" id="table">
+        <table class="table table-footer table-borderless" id="table">
           <tbody>
             <tr>
               <td>Weekends</td>
