--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-12 col-md-6 pt-4 ">
+        <div class="col-12 col-md-6  pt-4 ">
           <h3 class="text-center section-sub-heading">A warm Welcome</h3>
           <br>
           <div class="section-content">
-            <p>Purity Spa Leisure Centre, located in Putney is one of the most distinctive environments in which to
+            <p class="welcome-text">Purity Spa Leisure Centre, located in Putney is one of the most distinctive environments in which to
               restore mind, body and spirit. Owning its name to Greek word "ευημερία" Purity Spa promises to bring purity and
               prosperity to the costumers' life while experiencing our luxury and unique services. All of our treatments have harness the power of nature and science to create ground-breaking formulations that
               genuinely transform your skin. With more than 100 years of operation, we work hard to create a friendly day spa environment, that
@@ -92,8 +92,9 @@
               </p>
           </div>
         </div>
-        <div class="col-12 col-md-5 text-center mb-5">
+        <div class="col-12 col-md-5 d-block text-center mb-5">
           <img src="assets/images/spa-humidifier.jpg" class="img-thumbnail" alt="spa-humidifier-image">
+          
         </div>
       </div>
     </div>
@@ -106,12 +107,12 @@
         </div>
       </div>
       <div class="row massage-benefits-content">
-        <div class="col-12 col-md-6 mb-5 video-container p-2 p-sm-5">
+        <div class="col-lg-6 col-md-12 mb-4">
           <div class="ratio ratio-16x9">
             <iframe src="assets/images/massage-video.mp4" title="YouTube video" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
+        <div class="col-lg-6 col-md-12 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
           <p class="section-sub-heading mb-4">Why should you get a massage with us?</p>
           <p class="section-content"> Massage has been practiced for thousands of years and increasingly being offered along with standard beneficial health treatments, as it is generally considered part of integrative medicine and can have positive impact to a wide range of medical conditions and situations. Massage offers benefits  beyond simple relaxation as can reduce the pain of headache and the number of migraines. Lots of  studies have shown the effectiveness of massage for knee osteoarthritis fatigue, nausea, or depression, and it can also improve the function of your immune system. Furthermore a massage therapy can increase joint mobility and flexibility, reduce pain and muscle soreness, improve circulation, energy and alertness skin tone  and recovery of soft tissue injuries as well as  lower heart rate and blood pressure.
             
@@ -126,9 +127,9 @@
       <div class="row">
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3">
           <div class="timetable">
-            <h4 class="footer-headings text-center p-2">Opening Hours</h4>
+            <h4 class="footer-headings-opening text-center">Opening Hours</h4>
           </div>
-          <table class="table table-borderless" id="table">
+          <table class="table table-footer table-borderless" id="table">
             <tbody>
               <tr>
                 <td>Weekends</td>
@@ -181,12 +182,12 @@
           <h4 class="footer-headings text-center p-1">Find Us</h4>
           <iframe
             src="https://maps.google.com/maps?q=143%20Upper%20Richmond%20road&t=&z=13&ie=UTF8&iwloc=&output=embed"
-            style="border:0;" allowfullscreen="" aria-hidden="false"
+            style="border:0;" class="google-maps" allowfullscreen="" aria-hidden="false"
             title="Google map showing the location of ThermalSpa" tabindex="0">
           </iframe>
         </div>
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3 p-2">
-          <h4 class="footer-headings text-center p-1">Follow Us</h4>
+          <h4 class="footer-headings-follow-us text-center p-1">Follow Us</h4>
           <ul class="list-inline ">
             <li class="list-inline-item social-links text-center">
               <a class="btn" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank" rel="noopener"  role="button"><i
