--- a/booking.html
+++ b/booking.html
@@ -58,11 +58,11 @@
                     </div>
                     <div class="row d-flex justify-content-center align-items-center">
                         <div class="col-md-5 text-center mt-4">
-                            <form id="contactForm">
+                            <form id="contactForm" onsubmit="alert('Thank you for booking with Purity Spa! Your treatment has been booked!.')">
 
                                 <!-- Name -->
                                 <div class="mb-3 text-left">
-                                    <label for="Name"> Full Name</label>
+                                    <label for="name"> Full Name</label>
                                     <input class="form-control" id="name" type="text" placeholder="Name Last Name"
                                         required="required" />
                                 </div>
